@startuml name Class Diagram: SimulationView + Subsystems
skinparam classAttributeIconSize 0
top to bottom direction
skinparam ranksep 80
skinparam nodesep 30

' =====================================================
' Class Diagram: SimulationView + Subsystems
' =====================================================

interface IController

interface ISimulationView {
  + notifyFrameChange() : void
  + setEditorTime(time : number) : void
  + setSimulationTime(time : number) : void
  + selectDrone(id : number) : void
  + unselectDrone(id : number) : void
  + notifyCollisionChange(newCollision : List<number>) : void

}

' SimulationView – the central interface (Facade)
class SimulationView {

  - droneStore : DroneStateStore
  - pathStore : PathStateStore
  - lightStore : LightStateStore

  + SimulationView(drone : DroneStateStore, path : PathStateStore, light : LightStateStore)

 
}

' Subsystems – internal logic
class TimeManager {
  - currentEditorTime : number
  - simulationLight : LightFrame

  + applyLightChanges(currentLight : LightFrame) : LightFrame

  + setEditorTime(time: number) : void
  + setSimulationTime(time: number) : void
  + getCurrentEditorTime() : number

}



class SelectionManager {
  - selectedIds : List<number>

  + applyPathChanges(currentPathFrame : PathFrame, allPaths : PathFrame) : PathFrame
  + applyDroneChanges(currentDroneFrame : DroneFrame) : DroneFrame

  + selectDrone(id: number) : void
  + unselectDrone(id : number) : void
}

class CollisionManager {
  -currentCollisions : List<number>

  + applyPathChanges(currentPathFrame : PathFrame, allPaths : PathFrame) : PathFrame
  + applyDroneChanges(currentDroneFrame : DroneFrame) : DroneFrame

  + notifyCollisionChange(newCollision : List<number>) : void
}

SimulationView ..|> ISimulationView : <<realize>>

' Relationships: Delegation from SimulationView to subsystems
SimulationView " " --> "1 \n timeManager" TimeManager : applies frame modifications <
SimulationView " " --> "1 \n selectionManager" SelectionManager : applies frame modifications <
SimulationView " " --> "1 \n collisionManager" CollisionManager : applies frame modifications <

SimulationView " " ..> " " IController : <<use>>

note on link
  Used for frame-data access
  and event subscriptions
end note

' formatting '
IController -[hidden]-> ISimulationView
ISimulationView -[hidden]-> SimulationView
SimulationView -[hidden]-> TimeManager
IController -right[hidden]-> ISimulationView

@enduml
